<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SequenceItem" Id="{36ed2285-0a3c-4d9c-ade2-e39e448ad9c9}">
    <Declaration><![CDATA[TYPE ST_SequenceItem :
STRUCT
	nId			: UINT;
	nValue		: USINT(0..100);
	nDuration	: UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>